<resources>
    <string name="app_name">App Scheduler</string>
    <string name="title_activity_app_selection">AppSelectionActivity</string>
    <string name="select_an_app_to_schedule">Select an app to schedule</string>
    <string name="select_an_app">Select an App</string>
    <string name="no_app_selected">No app selected</string>
    <string name="pick_a_time_for_scheduling">Pick a time for scheduling:</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="time_format">%02d:%02d</string>

</resources>